@@ -3,7 +3,6 @@
 import gtk
 
 import tryton.common as common
-from tryton.common.widget_style import widget_class
 
 
 class StateMixin(object):
@@ -44,11 +43,8 @@ class Label(StateMixin, gtk.Label):
         required = ((field and field.attrs.get('required'))
                 or state_changes.get('required'))
         readonly = ((field and field.attrs.get('readonly'))
-                or state_changes.get('readonly'))
-        attrlist = common.get_label_attributes(readonly, required)
-        self.set_attributes(attrlist)
-        widget_class(self, 'readonly', readonly)
-        widget_class(self, 'required', required)
+                or state_changes.get('readonly', not bool(field)))
+        common.apply_label_attributes(self, readonly, required)
 
 
 class VBox(StateMixin, gtk.VBox):
