@@ -1,3 +1,4 @@
+* Use CSS to style label
 * New icons
 * Support timestamp field
 * Add support for Python 3.7
